# TexOS

./: .gitignore  CMakeLists.txt  README.md  makefile  questions_TP2.md  questions_TP4.md  ship_it.sh
common/: const.h  min_std_lib.c  min_std_lib.h  splash  splash2  syscall_nb.h  tex_fs.c  tex_fs.h  types.h  vga_colors.h
grub/: menu.lst
kernel/: bootstrap_asm.s  cursor.c  cursor.h  display.c  display.h  fs.c  fs.h  gdt.c  gdt.h  ide.c  ide.h  idt.c  idt.h  idt_asm.s  kernel.c  kernel.h  keyboard.c  keyboard.h  makefile  minStdLib.c  minStdLib.h  min_std_lib.c  min_std_lib.h  multiboot.h  pic.c  pic.h  pio_asm.h  pio_asm.s  syscall.c  syscall_asm.h  task.c  task.h  test.c  test.h  timer.c  timer.h  vga_colors.h  x86.h
report/: .gitignore  FS.graffle  FS_Report.tex
tools/: fs_add.c  fs_create.c  fs_create.h  fs_del.c  fs_info.c  fs_list.c  makefile  tex_fs_tools.c  tex_fs_tools.h
user/: app.c  entrypoint_asm.s  makefile  shell.c  taptouch.c  taptouch.ss  tex_lib.c  tex_lib.h
